# jitter

./: .env.example  .gitignore  .jitter.yml.example  .python-version  Dockerfile  Makefile  README.md  pyproject.toml
main/: config.py  input_parser.py  jitter.py
main/providers/: __init__.py  base.py  jira.py  linear.py
